# lwx_project

./: main.spec  main_win.spec  pyproject.toml  readme.txt  todo  todo.txt
data/daily_baoxian/important/: auth.json
data/daily_report/important/: leader_word_template.txt  motto.txt
lwx_project/: const.py  main_dev.py  main_prod.py
lwx_project/client/: base.py  const.py  main.py  main_contribution.py
lwx_project/client/scene/: activity_rate.py  contribution_client.py  daily_baoxian_client.py  daily_report_client.py  monthly_communication_data_client.py  monthly_east_data.py  monthly_east_data_client.py  monthly_profit_client.py  product_evaluation.py  product_name_match.py
lwx_project/client/ui/: activity_rate.ui  contribution.ui  daily_baoxian.ui  daily_report.ui  monthly_communication_data.ui  monthly_east_data.ui  monthly_profit.ui  product_evaluation.ui  product_name_match.ui
lwx_project/client/utils/: date_widget.py  list_widget.py  message_widget.py  table_widget.py
lwx_project/scene/: const.py
lwx_project/scene/activity_rate/: const.py
lwx_project/scene/comprehensive/: const.py  doc.py
lwx_project/scene/comprehensive_score/: const.py
lwx_project/scene/contribution/: __init__.py  const.py
lwx_project/utils/: biz.py  browser.py  calculator.py  conf.py  date.py  df.py  excel.py  excel_checker.py  excel_macro.py  excel_style.py  file.py  files.py  high_performance.py  lazy_class.py  logger.py  mail.py  my_itertools.py  picture.py  pptx_style.py  strings.py  time_cost.py  time_obj.py  year_month_obj.py
static/: excel_tool.xlsm
(+61 files in other folders)
