[project]
name = "lwx-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "openpyxl>=3.1.3",
    "pandas>=1.1.5",
    "playwright>=1.35.0",
    "playwright-stealth>=1.0.6",
    "pyqt5>=5.15.10",
    "qt5-tools>=5.15.2.1.3",
    "setuptools>=68.0.0",
]
